[package]
name = "txradar10"
version = "0.1.0"
edition = "2024"
description = "Real-time Bitcoin mempool monitor with whale/old-coin trading signals"
license = "MIT"

[dependencies]
# UI
dioxus = { version = "0.6", features = ["desktop"] }

# Bitcoin
bitcoin = "0.32"
zmq = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for RPC)
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database (UTXO cache / history)
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
